tests/expected_invalid_foundation_foreign_fn.diag.out
<input>:2:8: error: foreign functions may only appear in `boundary` or `hazard` modules
    public foreign fn getenv(name: CString) -> CString
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
